2005-12-13  Mike Kestner  <mkestner@novell.com>

	* configure.in.in : check for mono-cairo.pc.
	* Makefile.include : use AC_SUBST for cairo ref.
	* gdk/Gdk.metadata : s/Cairo.Graphics/Cairo.Context.

2005-12-12  Mike Kestner  <mkestner@novell.com>

	* gnomevfs/Gnomevfs.metadata : mark some const strings.
	[Fixes #76270]

2005-12-12  Mike Kestner  <mkestner@novell.com>

	* gdk/EventClient.cs : fix native long marshaling issue. Thanks to 
	 ed@catmur.co.uk for the bug report and investigation.
	[Fixes #76740]

2005-12-12  Itamar Rogel  <chastamar@yahoo.com>

	* NodeView.cs : add default ctor and NodeStore setter.
	[Fixes #76827]

2005-12-12  Mike Kestner  <mkestner@novell.com>

	* generator/Signal.cs : pass byte cnt for autogenerated string length
	parameters.  Thanks to Itamar Rogel for the report and a candidate
	patch. [Fixes #76952]

2005-12-10  Mike Kestner  <mkestner@novell.com>

	* gtk/gtk-api-2.8.raw : regenerated.
	* gtk/IconView.custom : manually implement a new interface method.
	* parser/gapi_pp.pl : more general G_DEFINE_TYPE_WITH_CODE parsing
	implementation.
	[Fixes #76266]

2005-12-10  Mike Kestner  <mkestner@novell.com>

	* gdk/gdk-symbols.xml : add GrabBroken mapping.
	* gdk/Event.cs : add GrabBroken to GetEvent.
	* gdk/EventGrabBroken.cs : manual Event subclass.
	* gdk/Gdk.metadata : hide new GrabBroken event.
	* gdk/Makefile.am : add new source file.

2005-12-09  Mike Kestner  <mkestner@novell.com>

	* pango/Pango.metadata : 2.8 API tweaks
	* gdk/Gdk.metadata : 2.8 API tweaks
	* gtk/Gtk.metadata : 2.8 API tweaks
	* gtk/IconView.custom : overloads for the weird ScrollToPath.
	* gtk/Makefile.am : add custom

2005-11-19  Mike Kestner  <mkestner@novell.com>

	* generator/ManualGen.cs (CallByName): add null handling.
	[Fixes #76540]

2005-11-15  Ben Maurer  <bmaurer@ximian.com>

	* gdk/Rectangle.custom: Fix up Intersect using p/invoke, per
	miguel's request.

2005-11-10  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.6 - renamed from bootstrap