@@ -1,5 +1,10 @@
 2005-12-13  Mike Kestner  <mkestner@novell.com>
 
+	* gconf/GConf/Makefile.am : add GAPI_CDECL_INSERT step.
+	* gconf/GConf.PropertyEditors/Makefile.am : add GAPI_CDECL_INSERT step.
+
+2005-12-13  Mike Kestner  <mkestner@novell.com>
+
 	* configure.in.in : check for mono-cairo.pc.
 	* Makefile.include : use AC_SUBST for cairo ref.
 	* gdk/Gdk.metadata : s/Cairo.Graphics/Cairo.Context.
